Fixed bottom scrollbar always showing (maybe)

--- a/wrapup/static/css/default.css
+++ b/wrapup/static/css/default.css
@@ -1,9 +1,14 @@
 body,html{
-    height: 100%;
     background-color: white;
     color: black;
     min-width: 300px;
+    
   }
+  body
+  {
+    margin: 0;
+  }
+
 
   .tables_view
   {
@@ -23,8 +28,14 @@ body,html{
   {
   	/*border: 2px solid red;*/
   	position: absolute;
-  	top: 100px;
-  	left: 0px;
+    top: 100px;
+    padding: 0px;
+   
+  }
+
+  .stories
+  {
+
   }
 
   .link
@@ -44,16 +55,20 @@ body,html{
     color: white;
     padding: 5px;
     padding-left: 20px;
+
   }
 
   .desc
   {
-    padding-left: 20px;
+     /*margin-left: -15px;*/
+     width: 90%;
+     padding: 10px;
+     
   }
 
   .info
   {
-    padding-left: 25px;
+    padding-left: 15px;
   }
 
   .bar a
@@ -108,6 +123,13 @@ body,html{
     color: red;
     padding: 5px;
   }
+
+  .row {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+
 
 /********************NAV******************/
 .navbar-default {
